timing works now added beeps, still no code for them

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,21 @@
   </aside>
   <section id='wave'>
     <canvas id='wave-canvas'></canvas>
+
+    <div class='playback-controls'>
+      <a class='fa fa-play' id='play'></a>
+      <a class='fa fa-stop' id='stop'></a>
+      <a class='fa fa-pause hidden' id='pause'></a>
+    </div>
+
+    <div class='tools'>
+      <ul>
+        <li class='fa fa-scissors'>Cut</li>
+        <li class='fa fa-compress'>Merge</li>
+        <li class='fa fa-plus'>Add</li>
+        <li class='fa fa-trash-o'>Delete</li>
+      </ul>
+    </div>
   </section>
   <section id='panel'>
   </section>
