--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
   <section id='panel'>
   </section>
 
+  <script src='js/libs/browser-polyfill.js'></script>
   <script src='js/libs/jquery.js'></script>
   <script src='js/libs/react.js'></script>
   <script src='js/views.js'></script>
