--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Beat.js</title>
+  <title>Ring Rang Rong</title>
   <link rel='stylesheet' href='css/main.css'>
 </head>
 <body>
