--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,9 @@
 <body>
   <aside id='controls'>
     <ul>
+      <li class='fa fa-plus' id='add-beep' data-modal>Beep</li>
       <li class='fa fa-plus' id='add-oscillator'>Oscillator</li>
-      <li class='fa fa-plus' id='add-stream'>Mic</li>
+      <li class='fa fa-plus' id='add-stream'>Record</li>
     </ul>
     <div id='properties'></div>
   </aside>
@@ -33,6 +34,62 @@
   </section>
   <section id='panel'>
   </section>
+
+  <div class='modal hide' id='select-beep'>
+    <p class='title'>Select a Beep</p>
+    <span>1</span>
+    <span>2</span>
+    <span>3</span>
+    <span>4</span>
+    <span>5</span>
+    <span>6</span>
+    <span>7</span>
+    <span>8</span>
+    <span>9</span>
+    <span>10</span>
+    <span>11</span>
+    <span>12</span>
+    <span>13</span>
+    <span>14</span>
+    <span>15</span>
+    <span>16</span>
+    <span>17</span>
+    <span>18</span>
+    <span>19</span>
+    <span>20</span>
+    <span>21</span>
+    <span>22</span>
+    <span>23</span>
+    <span>24</span>
+    <span>25</span>
+    <span>26</span>
+    <span>27</span>
+    <span>28</span>
+    <span>29</span>
+    <span>30</span>
+    <span>31</span>
+    <span>32</span>
+    <span>33</span>
+    <span>34</span>
+    <span>35</span>
+    <span>36</span>
+    <span>37</span>
+    <span>38</span>
+    <span>39</span>
+    <span>40</span>
+    <span>41</span>
+    <span>42</span>
+    <span>43</span>
+    <span>44</span>
+    <span>45</span>
+    <span>46</span>
+    <span>47</span>
+    <span>48</span>
+    <span>49</span>
+    <span>50</span>
+  </div>
+
+  <span id='tooltip'></span>
 
   <script src='js/libs/browser-polyfill.js'></script>
   <script src='js/libs/jquery.js'></script>
