Record using Recorder.js (https://github.com/mattdiamond/Recorderjs)

--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
   <script src='js/libs/browser-polyfill.js'></script>
   <script src='js/libs/jquery.js'></script>
   <script src='js/libs/react.js'></script>
+  <script src='js/libs/recorder.js'></script>
   <script src='js/views.js'></script>
   <script src='js/build.js'></script>
 </body>
