--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,18 @@
 <body>
   <aside id='controls'>
     <ul>
-      <li class='fa fa-plus' id='add-beep' data-modal>Beep</li>
-      <li class='fa fa-plus' id='add-oscillator'>Oscillator</li>
-      <li class='fa fa-plus' id='add-stream'>Record</li>
+      <li id='add-beep' data-modal>
+        <i class='fa fa-plus'></i>
+        Beep
+      </li>
+      <li id='add-oscillator'>
+        <i class='fa fa-plus'></i>
+        Oscillator
+      </li>
+      <li id='add-stream'>
+        <i class='fa fa-plus'></i>
+        Record Your Voice
+      </li>
     </ul>
     <div id='properties'></div>
   </aside>
@@ -25,10 +34,10 @@
 
     <div class='tools'>
       <ul>
-        <li class='fa fa-scissors'>Cut</li>
-        <li class='fa fa-compress'>Merge</li>
-        <li class='fa fa-plus'>Add</li>
-        <li class='fa fa-trash-o'>Delete</li>
+        <li><i class='fa fa-scissors'></i>Cut</li>
+        <li><i class='fa fa-compress'></i>Merge</li>
+        <li><i class='fa fa-plus'></i>Add</li>
+        <li><i class='fa fa-trash-o'></i>Delete</li>
       </ul>
     </div>
   </section>
