--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,10 @@
 
     <div class='tools'>
       <ul>
-        <li><i class='fa fa-scissors'></i>Cut</li>
-        <li><i class='fa fa-compress'></i>Merge</li>
-        <li><i class='fa fa-plus'></i>Add</li>
-        <li><i class='fa fa-trash-o'></i>Delete</li>
+        <li id='cut'><i class='fa fa-scissors'></i>Cut</li>
+        <li id='merge'><i class='fa fa-compress'></i>Merge</li>
+        <li id='add'><i class='fa fa-plus'></i>Add</li>
+        <li id='delete'><i class='fa fa-trash-o'></i>Delete</li>
       </ul>
     </div>
   </section>
